--- a/style/style.css
+++ b/style/style.css
@@ -202,3 +202,72 @@ body {
     border: 1px solid #ccc;
     cursor: pointer;
 }
+/* RECENT NEWS */
+.news-section {
+    width: 90%;
+    margin: 60px auto;
+}
+
+.news-section h2 {
+    margin-bottom: 10px;
+}
+
+.news-intro {
+    font-size: 14px;
+    opacity: 0.8;
+    margin-bottom: 30px;
+}
+
+.news-list {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.news-card {
+    display: flex;
+    gap: 25px;
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 12px;
+    align-items: center;
+}
+
+/* reverse layout */
+.news-card.reverse {
+    flex-direction: row-reverse;
+}
+
+.news-image img {
+    width: 260px;
+    border-radius: 12px;
+}
+
+.news-content h3 {
+    margin-bottom: 8px;
+}
+
+.source {
+    font-size: 12px;
+    opacity: 0.7;
+    margin-bottom: 10px;
+}
+
+.news-text {
+    font-size: 14px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+.btn-read {
+    padding: 8px 16px;
+    background: #1f7a5c;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.btn-read:hover {
+    background: #155c45;
+}
